# yngve-test

./: .bumpversion.cfg  LICENCE  setup.cfg
.devcontainer/: devcontainer.json
src/yngve-test/: __init__.py
