

[metadata]
name = yngve-test
version = 0.1.0
license= MIT license

description= Testing Yngves project setup
long_description = file: README.rst
author = Martin Hornkjøl
author_email = marhorn@math.uio.no
classifiers=
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   matplotlib
   numba
   tqdm
   pandas

[options.packages.find]
where=src

[bdist_wheel]
universal = 1
